// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typer isCorrectNmb: false 1`] = `
<div>
  <div
    style="display: flex; flex-wrap: wrap; width: 370px; justify-content: flex-end;"
  >
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      1
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      2
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      3
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      4
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      5
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      6
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      7
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      8
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      9
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      0
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      Очистить
    </div>
  </div>
  <div
    style="margin-top: 30px; border: 1px solid black; display: flex; justify-content: center; align-items: center; padding: 20px; cursor: pointer;"
  >
    Купить
  </div>
</div>
`;

exports[`Typer isCorrectNmb: null 1`] = `
<div>
  <div
    style="display: flex; flex-wrap: wrap; width: 370px; justify-content: flex-end;"
  >
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      1
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      2
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      3
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      4
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      5
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      6
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      7
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      8
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      9
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      0
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      Очистить
    </div>
  </div>
</div>
`;

exports[`Typer isCorrectNmb: true 1`] = `
<div>
  <div
    style="display: flex; flex-wrap: wrap; width: 370px; justify-content: flex-end;"
  >
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      1
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      2
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      3
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      4
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      5
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      6
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      7
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      8
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      9
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      0
    </div>
    <div
      style="padding: 30px; border: 1px solid black; width: 60px; cursor: pointer;"
    >
      Очистить
    </div>
  </div>
  <div
    style="margin-top: 30px; border: 1px solid black; display: flex; justify-content: center; align-items: center; padding: 20px; cursor: pointer;"
  >
    Купить
  </div>
</div>
`;
